manifests/pipeline/k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: demoapp
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app1
  name: app1
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app1
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/sandbox-project-1673797795/demoapp-repo/my-app:latest
        name: app1
        resources: {}
        imagePullPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: app1
  namespace: demoapp
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created    
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app1
