manifests/pipeline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
  namespace: demoapp
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    # deprecated annotation, use spec.ingressClass: 'gce'
    kubernetes.io/ingress.class: "gce"  
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: app1
            port:
              number: 8080
